syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message UpdateMessageRequest {
    int64 message_id = 1;
    google.protobuf.StringValue text = 2;
    repeated bytes records = 3;
    google.protobuf.Int64Value recallDate = 4;
    google.protobuf.Int64Value readDate = 5;
}